k8s/argocd-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"

    # mtls
    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
    # FIXME: part of declarative secret management
    nginx.ingress.kubernetes.io/auth-tls-secret: default/ca-secret
spec:
  ingressClassName: nginx
  rules:
    - host: argocd.k8s.jessie.cafe
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  name: https
  tls:
    - hosts:
      - argocd.k8s.jessie.cafe
      secretName: argocd-server-tls # as expected by argocd-server
